--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Meenakshi Sharma"
-  avatar           : ".png"
+  avatar           : "MYPIC.png"
   bio              : "PhD student at University of Jammu"
   location         : "India"
   employer         :
