--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,10 @@ author:
   bio              : "PhD student at University of Jammu"
   location         : "India"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : "https://scholar.google.com/citations?user=8EVa8ycAAAAJ&hl=en"
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Meenakshi-Sharma-15"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "PhysicistMeenakshiSharma"
+ # github           : "PhysicistMeenakshiSharma"
   google_plus      :
   keybase          :
   instagram        :
