--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "India"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=8EVa8ycAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/"
   email            : "meenakshi.sharma@cern.ch"
   researchgate     :  "https://www.researchgate.net/profile/Meenakshi-Sharma-15"
   uri              :
