--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "INDIA"
-title                    : "MEENAKSHI / MY WEBSITE"
+title                    : "MEENAKSHI SHARMA"
 title_separator          : "-"
 name                     : &name "Meenakshi Sharma"
 description              : &description "PhD student at University of Jammu"
