--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
   - title: "Talks and Posters"
     url: /talks/    
 
-  - title: "Schools and Training"
+  - title: "Schools, Workshops and Training"
     url: /teaching/    
     
   #- title: "Portfolio"
